# ChangeLog for dev-ruby/minitest
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.56 2011/10/25 06:02:17 graaff Exp $

*minitest-2.6.2 (25 Oct 2011)

  25 Oct 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.6.2.ebuild:
  Version bump.

  23 Oct 2011; Hans de Graaff <graaff@gentoo.org> minitest-2.6.1.ebuild:
  Add missing dependency on rdoc.

*minitest-2.6.1 (29 Sep 2011)

  29 Sep 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.6.1.ebuild:
  Version bump.

*minitest-2.6.0 (15 Sep 2011)

  15 Sep 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.6.0.ebuild:
  Version bump.

*minitest-2.5.1 (11 Sep 2011)

  11 Sep 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.5.1.ebuild:
  Version bump.

  11 Sep 2011; Hans de Graaff <graaff@gentoo.org> -minitest-2.1.0.ebuild,
  -minitest-2.2.2.ebuild, -minitest-2.3.0.ebuild:
  Remove old versions.

*minitest-2.5.0 (19 Aug 2011)

  19 Aug 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.5.0.ebuild:
  Version bump.

  19 Jul 2011; Hans de Graaff <graaff@gentoo.org> minitest-2.3.1.ebuild:
  Run all jruby tests that we can since tests won't be fixed upstream.

  15 Jul 2011; Matt Turner <mattst88@gentoo.org> minitest-2.3.1.ebuild:
  Added ~mips, bug 332593

*minitest-2.3.1 (15 Jul 2011)

  15 Jul 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.3.1.ebuild:
  Version bump.

  10 Jul 2011; Mark Loeser <halcy0n@gentoo.org> minitest-2.0.2.ebuild:
  Stable for ppc64; bug #354481

*minitest-2.3.0 (18 Jun 2011)

  18 Jun 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.3.0.ebuild:
  Version bump.

  18 Jun 2011; Hans de Graaff <graaff@gentoo.org> -minitest-2.0.2-r1.ebuild,
  -minitest-2.2.1.ebuild:
  Remove old versions.

*minitest-2.2.2 (02 Jun 2011)

  02 Jun 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.2.2.ebuild:
  Version bump.

*minitest-2.2.1 (01 Jun 2011)
