@@ -3,26 +3,20 @@ Hash: SHA256
 
 DIST minitest-1.5.0.gem 22016 RMD160 b03a078ebce40ca49004755c5aa86284b5df4913 SHA1 a1ba12e983ded309951f8ce44f1ef4b6e5818525 SHA256 f34df58fdac0a9be80733151d94ee0e6d5483ab2a6eeec3915be5a9c54729d34
 DIST minitest-2.0.2.gem 33280 RMD160 3dc413876ffea193c983c816c17f4e332e054d33 SHA1 052589f484871db9b0841d583034c9073a74f450 SHA256 c0ab2bb4358229f8174079fa741b96368f4602bea810f426cfe03f35e674e9f0
-DIST minitest-2.3.1.gem 38912 RMD160 85d22ecf7a92d71ccafff1ddffa834046d0d7b05 SHA1 96085943941c04be297abe0c9528a54b8d1d3877 SHA256 cc6383e473e7135508d5c2b13ae6af564c520f0e1ac94e42f23c3d54c7746618
-DIST minitest-2.5.0.gem 40960 RMD160 99e056603912627cc92069bf8b2f50f9c5a77a9d SHA1 875215aad9a10a2010c295c7bb2194964cf43b83 SHA256 fc782be0f81f3a76398df5a0dd2dc71f6b611f824062a4c555526b8bf59310d2
-DIST minitest-2.5.1.gem 41472 RMD160 d7d164f31d92283839be004c42470a8312dfdfa7 SHA1 8ce1958bae0a0411930ba4df4c4ddec0f9c89030 SHA256 a42461c8063444efdb234b2914422001ccf40f9d15fc2a247922bdfe0d360886
 DIST minitest-2.6.0.gem 41984 RMD160 cc08fee9d95aa35478b4a0c0a088a9754e044c65 SHA1 f3c1bdb123e2c2877c8b1733833b3a49a1412f82 SHA256 1b486dc0d6c47e35cf1512427165e366b6b04f01a76abdd6d7bc38cdd4ce88e4
 DIST minitest-2.6.1.gem 41984 RMD160 ebbaae1d43ae9b8e700f85d0abf5088cda600382 SHA1 c33c386b64acfcdd7bdede9afca7aab8415e22f8 SHA256 49be847b3bcda0a95b2ea9e67ae2896a3bef027ae222656d3c6ab72fd78ad109
 DIST minitest-2.6.2.gem 42496 RMD160 d35868b1efff2eb7f102d4e4f4a2b06fb12d2bab SHA1 6957163aeebd45549dfa9f875c30de1a5c72ba81 SHA256 967cde3179b1587be242d9d02ce37c8598c7ed1f4ed68c0ef7cfbefbcbbb5a06
 EBUILD minitest-1.5.0.ebuild 840 RMD160 775f802ac3df214268113ee03343ba2c844b958b SHA1 5f6fa1afc5d2938e135c623e3dd7fafb03aa7629 SHA256 5274ae102baba79f3f8faadd808fcb95b7b602a0bddafd6134864ecffdaa1932
 EBUILD minitest-2.0.2.ebuild 1098 RMD160 89887ff7124ab2495e4fc57bc7fd3871a70fd42a SHA1 7384ed6e30bbd13cd9dc5d6cee3a1c106b5b35ad SHA256 238f63da9f92543d5a0564c3c7ab063df3521660d171b9df5924b0eca4017b74
-EBUILD minitest-2.3.1.ebuild 1292 RMD160 9433ca9a96f4d7b9c10c046c658b30cf8202531c SHA1 ec20b985161622f18d2d3136108feac11854376c SHA256 e6e610dc00670b37053becbd4f397126cb36b13fadaec1f7dfb6fcf78ea1901b
-EBUILD minitest-2.5.0.ebuild 1270 RMD160 e6208541cf2e778c29ea50a7209b0f1b6d444cd0 SHA1 49a92fe65a83104e48a47f0eb3e8efe9595162a6 SHA256 fc143c56d207f75af387060a5574690ab1886f75e3d6f974cb22cc5a3d57865c
-EBUILD minitest-2.5.1.ebuild 1270 RMD160 66fd3a057839474500b0e658ea50eb4411295c48 SHA1 46192b061b730d78c096f166dfca0e491cd776a9 SHA256 94e4a7d3925cc99c48c0d1eed2953dcd74a143030b0a455f3674bd96661263fe
 EBUILD minitest-2.6.0.ebuild 1270 RMD160 16d6cb34cfc36fcf12b5400a87aa8232eeb5c6d5 SHA1 33c8317bc45342e2b46ac734c3e9b2e721f3efc6 SHA256 88274a1161f4c657cc8be124991471c7f036fbc2584f6fe5425b2f42404c5a54
 EBUILD minitest-2.6.1.ebuild 1275 RMD160 aa9fae3b7fc695ffb1afcccbb4600d890909e379 SHA1 3b6b792cc7c1725c6a7b2fa976ce01349c68319f SHA256 1b5aac9c6326dac476e55d2d5dde10486f24010cc2e5de5d283a826b078bee7a
 EBUILD minitest-2.6.2.ebuild 1275 RMD160 0438f87a54b7076c6a1f9ff7d6b5e720cdadd7a7 SHA1 569b0092d0e9ead73642e232eb60e4344f77875d SHA256 5de2c43e62c3c475197c4eabd29b0a05107cb9e9a6ea25f8a01532094dbb9e9d
-MISC ChangeLog 7393 RMD160 edbad7232683347f8aa1a10e0d373070bfaeced0 SHA1 0ef84e2a565f6ebfd80de8c2fbf84b7178165df8 SHA256 749083666dd441af58301036925af565dedcc61b194b0a363f0df02047716d16
+MISC ChangeLog 7541 RMD160 498db40fb01c3ff729b76f401895ace504d87ae4 SHA1 0cb871cc8e5ccd419515de0699c62ec3012e7b3d SHA256 50db130d0c74a21cbce0608fca89e599625b49b30dfdf13a5479f1cc47b08dae
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk6mUPQACgkQiIP6VqMIqNfz3gD8DH42PvHC1+AU+bnRQiv9iW97
-tvgzmp8iZyH/udIfrokA/jUxRmApOh+LWqDe/t+NyUbs9ck9IYGRBgCNfItcsy2K
-=dLpt
+iF4EAREIAAYFAk6mUW4ACgkQiIP6VqMIqNfyYgD9F6H0f+2MPxjXeOx6skFyLx1s
+wxmiuylelWxg/yR7dK0A/i0a614mqAKcdH122xZtyo8xlvD+3NJ54Ah8K06KuCVi
+=mRAg
 -----END PGP SIGNATURE-----
