@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/minitest
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.56 2011/10/25 06:02:17 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.57 2011/10/25 06:04:25 graaff Exp $
+
+  25 Oct 2011; Hans de Graaff <graaff@gentoo.org> -minitest-2.3.1.ebuild,
+  -minitest-2.5.0.ebuild, -minitest-2.5.1.ebuild:
+  Remove old versions.
 
 *minitest-2.6.2 (25 Oct 2011)
 
